Update questionnaire response questionnaire_type
