# app/schema/api/v4/models.rb
@@ -394,8 +394,7 @@ class Api::V4::Models
        properties: {
          id: {"$ref" => "#/definitions/uuid"},
          deleted_at: {"$ref" => "#/definitions/nullable_timestamp"},
-         questionnaire_type: {type: :string,
-                              enum: Questionnaire.questionnaire_types.keys},
+         questionnaire_type: {type: :string, enum: Questionnaire.questionnaire_types.keys},
          layout: {
            oneOf: [
              {"$ref" => "#/definitions/questionnaire_layout_dsl_version_1"}
@@ -412,8 +411,7 @@ class Api::V4::Models
          deleted_at: {"$ref" => "#/definitions/nullable_timestamp"},
          created_at: {"$ref" => "#/definitions/timestamp"},
          updated_at: {"$ref" => "#/definitions/timestamp"},
-         # TODO: Change non_empty_string to questionnaire_type enum.
-         questionnaire_type: {"$ref" => "#/definitions/non_empty_string"},
+         questionnaire_type: {type: :string, enum: Questionnaire.questionnaire_types.keys},
          questionnaire_id: {"$ref" => "#/definitions/uuid"},
          facility_id: {"$ref" => "#/definitions/uuid"},
          user_id: {"$ref" => "#/definitions/nullable_uuid"},
